feat: 메모 기본, 선택시 색상 적용

--- a/PhotoMemo/View/MemoCollectionViewCell.xib
+++ b/PhotoMemo/View/MemoCollectionViewCell.xib
@@ -3,8 +3,8 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -26,7 +26,7 @@
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <color key="backgroundColor" systemColor="systemGrayColor"/>
+            <color key="backgroundColor" name="memoBase"/>
             <constraints>
                 <constraint firstItem="5cj-eL-ipu" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="1C3-0E-Uu4"/>
                 <constraint firstItem="5cj-eL-ipu" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="HtT-ig-yQ2"/>
@@ -41,8 +41,8 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <systemColor name="systemGrayColor">
-            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
+        <namedColor name="memoBase">
+            <color red="1" green="1" blue="0.70960390567779541" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
